[package]
name = "testcontainers-async"
version = "0.1.0"
edition = "2021"
authors = [
    "Jimmie Fulton <jimmie.fulton@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bollard = "0.11.1"
bollard-stubs = "1.41.1"
futures = "0.3"
thiserror = "1.0"
tokio = {version = "1.17.0", features = ["rt","macros"]}

[[test]]
name = "integration"
path = "tests/lib.rs"
